# web-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sandbox/: chat_auth.py  google_chat_bot.py  sample02_extract_all_text.py  sample02_save_html.py  sample03_craw_urls.py  sample04_crawl_one_domain.py
src/web_crawler/: search.py
tests/: test_search.py
