[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_crawler"
version = "0.0.1"
authors = [
    { name = "UNO Leo", email = "leouno12@gmail.com" },
]
description = "Fantastic web crawler"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aitit-inc/so_pandas_util"
"Bug Tracker" = "https://github.com/aitit-inc/so_pandas_util/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]